Курсовая/My/bisonReady.output
Terminals unused in grammar

   ENDY
   ErrorY


Rules useless in parser due to conflicts

   65 TabZeroOrMore: /* empty */


State 27 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce, 1 reduce/reduce
State 69 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce, 1 reduce/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce, 1 reduce/reduce
State 113 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce, 1 reduce/reduce
State 117 conflicts: 1 shift/reduce, 1 reduce/reduce
State 119 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce, 1 reduce/reduce
State 131 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: Statements

    2 Statement: IfStatement
    3          | WhileStatement
    4          | ForStatement
    5          | AssignmentStatement
    6          | InputStatement
    7          | OutputStatement
    8          | ClassDeclaration
    9          | Function
   10          | FunctionCall
   11          | ReturnStatement
   12          | DelimiterY

   13 Statements: /* empty */
   14           | Statements Statement

   15 Value: VariableY DotY VariableY
   16      | VariableY OpenBracesY Arithmetic CloseBracesY
   17      | VariableY
   18      | NumberY
   19      | BoolY

   20 Identificator: VariableY DotY VariableY
   21              | VariableY OpenBracesY Arithmetic CloseBracesY
   22              | VariableY

   23 ReturnStatement: ReturnY DelimiterY
   24                | ReturnY Value DelimiterY

   25 AssignmentStatement: Identificator AssignmentY Arithmetic DelimiterY
   26                    | Identificator AssignmentY InputStatement DelimiterY
   27                    | Identificator AssignmentY FunctionCall DelimiterY
   28                    | Identificator AssignmentY ArrayDeclaration DelimiterY

   29 ArrayDeclaration: OpenBracesY Arguments CloseBracesY

   30 ClassDeclaration: ClassY VariableY OpenBracketY CloseBracketY DoubleDotY DelimiterY Block

   31 Function: DefY VariableY OpenBracketY FunctionArguments CloseBracketY DoubleDotY DelimiterY Block

   32 FunctionArguments: VariableY FuncArgsZeroOrMore
   33                  | /* empty */

   34 FuncArgsZeroOrMore: /* empty */
   35                   | FuncArgsZeroOrMore CommaY FunctionArgument

   36 FunctionArgument: VariableY FuncArgsZeroOrMore

   37 FunctionCall: VariableY OpenBracketY Arguments CloseBracketY DelimiterY

   38 Arguments: Identificator ArgsZeroOrMore
   39          | /* empty */

   40 ArgsZeroOrMore: /* empty */
   41               | ArgsZeroOrMore CommaY Argument

   42 Argument: Identificator ArgsZeroOrMore

   43 IfStatement: IfY Logic DoubleDotY DelimiterY Block IfZeroOrMore

   44 IfZeroOrMore: /* empty */
   45             | IfZeroOrMore ElseY DoubleDotY DelimiterY Block

   46 WhileStatement: WhileY Logic DoubleDotY DelimiterY Block

   47 ForStatement: ForY Value InY Value DoubleDotY DelimiterY Block

   48 Logic: OpenBracketZeroOrMore LogicExpression LogicZeroOrMore CloseBracketZeroOrMore

   49 LogicZeroOrMore: /* empty */
   50                | LogicZeroOrMore LogicalY Logic

   51 LogicExpression: OpenBracketZeroOrMore Arithmetic LogicExprZeroOrMore CloseBracketZeroOrMore

   52 LogicExprZeroOrMore: /* empty */
   53                    | LogicExprZeroOrMore ComparisonY LogicExpression

   54 OpenBracketZeroOrMore: /* empty */
   55                      | OpenBracketZeroOrMore OpenBracketY

   56 CloseBracketZeroOrMore: /* empty */
   57                       | CloseBracketZeroOrMore CloseBracketY

   58 Arithmetic: OpenBracketZeroOrMore Value ArithmeticZeroOrMore CloseBracketZeroOrMore

   59 ArithmeticZeroOrMore: /* empty */
   60                     | ArithmeticZeroOrMore MathSignY Arithmetic

   61 InputStatement: InputY OpenBracketY CloseBracketY DelimiterY

   62 OutputStatement: OutputY OpenBracketY Value CloseBracketY DelimiterY

   63 Block: TabOneOrMore Statement Block
   64      | /* empty */

   65 TabZeroOrMore: /* empty */
   66              | TabZeroOrMore TabY

   67 TabOneOrMore: TabY
   68             | TabZeroOrMore TabY


Terminals, with rules where they appear

$end (0) 0
error (256)
DelimiterY (258) 12 23 24 25 26 27 28 30 31 37 43 45 46 47 61 62
TabY (259) 66 67 68
CommaY (260) 35 41
DotY (261) 15 20
DoubleDotY (262) 30 31 43 45 46 47
BoolY (263) 19
OpenBracesY (264) 16 21 29
CloseBracesY (265) 16 21 29
OpenBracketY (266) 30 31 37 55 61 62
CloseBracketY (267) 30 31 37 57 61 62
ComparisonY (268) 53
LogicalY (269) 50
AssignmentY (270) 25 26 27 28
MathSignY (271) 60
IfY (272) 43
ElseY (273) 45
ForY (274) 47
InY (275) 47
WhileY (276) 46
InputY (277) 61
OutputY (278) 62
DefY (279) 31
ClassY (280) 30
VariableY (281) 15 16 17 20 21 22 30 31 32 36 37
NumberY (282) 18
ReturnY (283) 23 24
ENDY (284)
ErrorY (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
Statement (33)
    on left: 2 3 4 5 6 7 8 9 10 11 12, on right: 14 63
Statements (34)
    on left: 13 14, on right: 1 14
Value (35)
    on left: 15 16 17 18 19, on right: 24 47 58 62
Identificator (36)
    on left: 20 21 22, on right: 25 26 27 28 38 42
ReturnStatement (37)
    on left: 23 24, on right: 11
AssignmentStatement (38)
    on left: 25 26 27 28, on right: 5
ArrayDeclaration (39)
    on left: 29, on right: 28
ClassDeclaration (40)
    on left: 30, on right: 8
Function (41)
    on left: 31, on right: 9
FunctionArguments (42)
    on left: 32 33, on right: 31
FuncArgsZeroOrMore (43)
    on left: 34 35, on right: 32 35 36
FunctionArgument (44)
    on left: 36, on right: 35
FunctionCall (45)
    on left: 37, on right: 10 27
Arguments (46)
    on left: 38 39, on right: 29 37
ArgsZeroOrMore (47)
    on left: 40 41, on right: 38 41 42
Argument (48)
    on left: 42, on right: 41
IfStatement (49)
    on left: 43, on right: 2
IfZeroOrMore (50)
    on left: 44 45, on right: 43 45
WhileStatement (51)
    on left: 46, on right: 3
ForStatement (52)
    on left: 47, on right: 4
Logic (53)
    on left: 48, on right: 43 46 50
LogicZeroOrMore (54)
    on left: 49 50, on right: 48 50
LogicExpression (55)
    on left: 51, on right: 48 53
LogicExprZeroOrMore (56)
    on left: 52 53, on right: 51 53
OpenBracketZeroOrMore (57)
    on left: 54 55, on right: 48 51 55 58
CloseBracketZeroOrMore (58)
    on left: 56 57, on right: 48 51 57 58
Arithmetic (59)
    on left: 58, on right: 16 21 25 51 60
ArithmeticZeroOrMore (60)
    on left: 59 60, on right: 58 60
InputStatement (61)
    on left: 61, on right: 6 26
OutputStatement (62)
    on left: 62, on right: 7
Block (63)
    on left: 63 64, on right: 30 31 43 45 46 47 63
TabZeroOrMore (64)
    on left: 65 66, on right: 66 68
TabOneOrMore (65)
    on left: 67 68, on right: 63


state 0

    0 $accept: . Program $end

    $default  reduce using rule 13 (Statements)

    Program     go to state 1
    Statements  go to state 2


state 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


state 2

    1 Program: Statements .
   14 Statements: Statements . Statement

    DelimiterY  shift, and go to state 4
    IfY         shift, and go to state 5
    ForY        shift, and go to state 6
    WhileY      shift, and go to state 7
    InputY      shift, and go to state 8
    OutputY     shift, and go to state 9
    DefY        shift, and go to state 10
    ClassY      shift, and go to state 11
    VariableY   shift, and go to state 12
    ReturnY     shift, and go to state 13

    $default  reduce using rule 1 (Program)

    Statement            go to state 14
    Identificator        go to state 15
    ReturnStatement      go to state 16
    AssignmentStatement  go to state 17
    ClassDeclaration     go to state 18
    Function             go to state 19
    FunctionCall         go to state 20
    IfStatement          go to state 21
    WhileStatement       go to state 22
    ForStatement         go to state 23
    InputStatement       go to state 24
    OutputStatement      go to state 25


state 3

    0 $accept: Program $end .

    $default  accept


state 4

   12 Statement: DelimiterY .

    $default  reduce using rule 12 (Statement)


state 5

   43 IfStatement: IfY . Logic DoubleDotY DelimiterY Block IfZeroOrMore

    $default  reduce using rule 54 (OpenBracketZeroOrMore)

    Logic                  go to state 26
    OpenBracketZeroOrMore  go to state 27


state 6

   47 ForStatement: ForY . Value InY Value DoubleDotY DelimiterY Block

    BoolY      shift, and go to state 28
    VariableY  shift, and go to state 29
    NumberY    shift, and go to state 30

    Value  go to state 31


state 7

   46 WhileStatement: WhileY . Logic DoubleDotY DelimiterY Block

    $default  reduce using rule 54 (OpenBracketZeroOrMore)

    Logic                  go to state 32
    OpenBracketZeroOrMore  go to state 27


state 8

   61 InputStatement: InputY . OpenBracketY CloseBracketY DelimiterY

    OpenBracketY  shift, and go to state 33


state 9

   62 OutputStatement: OutputY . OpenBracketY Value CloseBracketY DelimiterY

    OpenBracketY  shift, and go to state 34


state 10

   31 Function: DefY . VariableY OpenBracketY FunctionArguments CloseBracketY DoubleDotY DelimiterY Block

    VariableY  shift, and go to state 35


state 11

   30 ClassDeclaration: ClassY . VariableY OpenBracketY CloseBracketY DoubleDotY DelimiterY Block

    VariableY  shift, and go to state 36


state 12

   20 Identificator: VariableY . DotY VariableY
   21              | VariableY . OpenBracesY Arithmetic CloseBracesY
   22              | VariableY .
   37 FunctionCall: VariableY . OpenBracketY Arguments CloseBracketY DelimiterY

    DotY          shift, and go to state 37
    OpenBracesY   shift, and go to state 38
    OpenBracketY  shift, and go to state 39

    $default  reduce using rule 22 (Identificator)


state 13

   23 ReturnStatement: ReturnY . DelimiterY
   24                | ReturnY . Value DelimiterY

    DelimiterY  shift, and go to state 40
    BoolY       shift, and go to state 28
    VariableY   shift, and go to state 29
    NumberY     shift, and go to state 30

    Value  go to state 41


state 14

   14 Statements: Statements Statement .

    $default  reduce using rule 14 (Statements)


state 15

   25 AssignmentStatement: Identificator . AssignmentY Arithmetic DelimiterY
   26                    | Identificator . AssignmentY InputStatement DelimiterY
   27                    | Identificator . AssignmentY FunctionCall DelimiterY
   28                    | Identificator . AssignmentY ArrayDeclaration DelimiterY

    AssignmentY  shift, and go to state 42


state 16

   11 Statement: ReturnStatement .

    $default  reduce using rule 11 (Statement)


state 17

    5 Statement: AssignmentStatement .

    $default  reduce using rule 5 (Statement)


state 18

    8 Statement: ClassDeclaration .

    $default  reduce using rule 8 (Statement)


state 19

    9 Statement: Function .

    $default  reduce using rule 9 (Statement)


state 20

   10 Statement: FunctionCall .

    $default  reduce using rule 10 (Statement)


state 21

    2 Statement: IfStatement .

    $default  reduce using rule 2 (Statement)


state 22

    3 Statement: WhileStatement .

    $default  reduce using rule 3 (Statement)


state 23

    4 Statement: ForStatement .

    $default  reduce using rule 4 (Statement)


state 24

    6 Statement: InputStatement .

    $default  reduce using rule 6 (Statement)


state 25

    7 Statement: OutputStatement .

    $default  reduce using rule 7 (Statement)


state 26

   43 IfStatement: IfY Logic . DoubleDotY DelimiterY Block IfZeroOrMore

    DoubleDotY  shift, and go to state 43


state 27

   48 Logic: OpenBracketZeroOrMore . LogicExpression LogicZeroOrMore CloseBracketZeroOrMore
   55 OpenBracketZeroOrMore: OpenBracketZeroOrMore . OpenBracketY

    OpenBracketY  shift, and go to state 44

    OpenBracketY  [reduce using rule 54 (OpenBracketZeroOrMore)]
    $default      reduce using rule 54 (OpenBracketZeroOrMore)

    LogicExpression        go to state 45
    OpenBracketZeroOrMore  go to state 46


state 28

   19 Value: BoolY .

    $default  reduce using rule 19 (Value)


state 29

   15 Value: VariableY . DotY VariableY
   16      | VariableY . OpenBracesY Arithmetic CloseBracesY
   17      | VariableY .

    DotY         shift, and go to state 47
    OpenBracesY  shift, and go to state 48

    $default  reduce using rule 17 (Value)


state 30

   18 Value: NumberY .

    $default  reduce using rule 18 (Value)


state 31

   47 ForStatement: ForY Value . InY Value DoubleDotY DelimiterY Block

    InY  shift, and go to state 49


state 32

   46 WhileStatement: WhileY Logic . DoubleDotY DelimiterY Block

    DoubleDotY  shift, and go to state 50


state 33

   61 InputStatement: InputY OpenBracketY . CloseBracketY DelimiterY

    CloseBracketY  shift, and go to state 51


state 34

   62 OutputStatement: OutputY OpenBracketY . Value CloseBracketY DelimiterY

    BoolY      shift, and go to state 28
    VariableY  shift, and go to state 29
    NumberY    shift, and go to state 30

    Value  go to state 52


state 35

   31 Function: DefY VariableY . OpenBracketY FunctionArguments CloseBracketY DoubleDotY DelimiterY Block

    OpenBracketY  shift, and go to state 53


state 36

   30 ClassDeclaration: ClassY VariableY . OpenBracketY CloseBracketY DoubleDotY DelimiterY Block

    OpenBracketY  shift, and go to state 54


state 37

   20 Identificator: VariableY DotY . VariableY

    VariableY  shift, and go to state 55


state 38

   21 Identificator: VariableY OpenBracesY . Arithmetic CloseBracesY

    $default  reduce using rule 54 (OpenBracketZeroOrMore)

    OpenBracketZeroOrMore  go to state 56
    Arithmetic             go to state 57


state 39

   37 FunctionCall: VariableY OpenBracketY . Arguments CloseBracketY DelimiterY

    VariableY  shift, and go to state 58

    $default  reduce using rule 39 (Arguments)

    Identificator  go to state 59
    Arguments      go to state 60


state 40

   23 ReturnStatement: ReturnY DelimiterY .

    $default  reduce using rule 23 (ReturnStatement)


state 41

   24 ReturnStatement: ReturnY Value . DelimiterY

    DelimiterY  shift, and go to state 61


state 42

   25 AssignmentStatement: Identificator AssignmentY . Arithmetic DelimiterY
   26                    | Identificator AssignmentY . InputStatement DelimiterY
   27                    | Identificator AssignmentY . FunctionCall DelimiterY
   28                    | Identificator AssignmentY . ArrayDeclaration DelimiterY

    OpenBracesY  shift, and go to state 62
    InputY       shift, and go to state 8
    VariableY    shift, and go to state 63

    VariableY  [reduce using rule 54 (OpenBracketZeroOrMore)]
    $default   reduce using rule 54 (OpenBracketZeroOrMore)

    ArrayDeclaration       go to state 64
    FunctionCall           go to state 65
    OpenBracketZeroOrMore  go to state 56
    Arithmetic             go to state 66
    InputStatement         go to state 67


state 43

   43 IfStatement: IfY Logic DoubleDotY . DelimiterY Block IfZeroOrMore

    DelimiterY  shift, and go to state 68


state 44

   55 OpenBracketZeroOrMore: OpenBracketZeroOrMore OpenBracketY .

    $default  reduce using rule 55 (OpenBracketZeroOrMore)


state 45

   48 Logic: OpenBracketZeroOrMore LogicExpression . LogicZeroOrMore CloseBracketZeroOrMore

    $default  reduce using rule 49 (LogicZeroOrMore)

    LogicZeroOrMore  go to state 69


state 46

   51 LogicExpression: OpenBracketZeroOrMore . Arithmetic LogicExprZeroOrMore CloseBracketZeroOrMore
   55 OpenBracketZeroOrMore: OpenBracketZeroOrMore . OpenBracketY

    OpenBracketY  shift, and go to state 44

    OpenBracketY  [reduce using rule 54 (OpenBracketZeroOrMore)]
    $default      reduce using rule 54 (OpenBracketZeroOrMore)

    OpenBracketZeroOrMore  go to state 56
    Arithmetic             go to state 70


state 47

   15 Value: VariableY DotY . VariableY

    VariableY  shift, and go to state 71


state 48

   16 Value: VariableY OpenBracesY . Arithmetic CloseBracesY

    $default  reduce using rule 54 (OpenBracketZeroOrMore)

    OpenBracketZeroOrMore  go to state 56
    Arithmetic             go to state 72


state 49

   47 ForStatement: ForY Value InY . Value DoubleDotY DelimiterY Block

    BoolY      shift, and go to state 28
    VariableY  shift, and go to state 29
    NumberY    shift, and go to state 30

    Value  go to state 73


state 50

   46 WhileStatement: WhileY Logic DoubleDotY . DelimiterY Block

    DelimiterY  shift, and go to state 74


state 51

   61 InputStatement: InputY OpenBracketY CloseBracketY . DelimiterY

    DelimiterY  shift, and go to state 75


state 52

   62 OutputStatement: OutputY OpenBracketY Value . CloseBracketY DelimiterY

    CloseBracketY  shift, and go to state 76


state 53

   31 Function: DefY VariableY OpenBracketY . FunctionArguments CloseBracketY DoubleDotY DelimiterY Block

    VariableY  shift, and go to state 77

    $default  reduce using rule 33 (FunctionArguments)

    FunctionArguments  go to state 78


state 54

   30 ClassDeclaration: ClassY VariableY OpenBracketY . CloseBracketY DoubleDotY DelimiterY Block

    CloseBracketY  shift, and go to state 79


state 55

   20 Identificator: VariableY DotY VariableY .

    $default  reduce using rule 20 (Identificator)


state 56

   55 OpenBracketZeroOrMore: OpenBracketZeroOrMore . OpenBracketY
   58 Arithmetic: OpenBracketZeroOrMore . Value ArithmeticZeroOrMore CloseBracketZeroOrMore

    BoolY         shift, and go to state 28
    OpenBracketY  shift, and go to state 44
    VariableY     shift, and go to state 29
    NumberY       shift, and go to state 30

    Value  go to state 80


state 57

   21 Identificator: VariableY OpenBracesY Arithmetic . CloseBracesY

    CloseBracesY  shift, and go to state 81


state 58

   20 Identificator: VariableY . DotY VariableY
   21              | VariableY . OpenBracesY Arithmetic CloseBracesY
   22              | VariableY .

    DotY         shift, and go to state 37
    OpenBracesY  shift, and go to state 38

    $default  reduce using rule 22 (Identificator)


state 59

   38 Arguments: Identificator . ArgsZeroOrMore

    $default  reduce using rule 40 (ArgsZeroOrMore)

    ArgsZeroOrMore  go to state 82


state 60

   37 FunctionCall: VariableY OpenBracketY Arguments . CloseBracketY DelimiterY

    CloseBracketY  shift, and go to state 83


state 61

   24 ReturnStatement: ReturnY Value DelimiterY .

    $default  reduce using rule 24 (ReturnStatement)


state 62

   29 ArrayDeclaration: OpenBracesY . Arguments CloseBracesY

    VariableY  shift, and go to state 58

    $default  reduce using rule 39 (Arguments)

    Identificator  go to state 59
    Arguments      go to state 84


state 63

   37 FunctionCall: VariableY . OpenBracketY Arguments CloseBracketY DelimiterY

    OpenBracketY  shift, and go to state 39


state 64

   28 AssignmentStatement: Identificator AssignmentY ArrayDeclaration . DelimiterY

    DelimiterY  shift, and go to state 85


state 65

   27 AssignmentStatement: Identificator AssignmentY FunctionCall . DelimiterY

    DelimiterY  shift, and go to state 86


state 66

   25 AssignmentStatement: Identificator AssignmentY Arithmetic . DelimiterY

    DelimiterY  shift, and go to state 87


state 67

   26 AssignmentStatement: Identificator AssignmentY InputStatement . DelimiterY

    DelimiterY  shift, and go to state 88


state 68

   43 IfStatement: IfY Logic DoubleDotY DelimiterY . Block IfZeroOrMore

    TabY  shift, and go to state 89

    TabY      [reduce using rule 64 (Block)]
    TabY      [reduce using rule 65 (TabZeroOrMore)]
    $default  reduce using rule 64 (Block)

    Block          go to state 90
    TabZeroOrMore  go to state 91
    TabOneOrMore   go to state 92


state 69

   48 Logic: OpenBracketZeroOrMore LogicExpression LogicZeroOrMore . CloseBracketZeroOrMore
   50 LogicZeroOrMore: LogicZeroOrMore . LogicalY Logic

    LogicalY  shift, and go to state 93

    LogicalY  [reduce using rule 56 (CloseBracketZeroOrMore)]
    $default  reduce using rule 56 (CloseBracketZeroOrMore)

    CloseBracketZeroOrMore  go to state 94


state 70

   51 LogicExpression: OpenBracketZeroOrMore Arithmetic . LogicExprZeroOrMore CloseBracketZeroOrMore

    $default  reduce using rule 52 (LogicExprZeroOrMore)

    LogicExprZeroOrMore  go to state 95


state 71

   15 Value: VariableY DotY VariableY .

    $default  reduce using rule 15 (Value)


state 72

   16 Value: VariableY OpenBracesY Arithmetic . CloseBracesY

    CloseBracesY  shift, and go to state 96


state 73

   47 ForStatement: ForY Value InY Value . DoubleDotY DelimiterY Block

    DoubleDotY  shift, and go to state 97


state 74

   46 WhileStatement: WhileY Logic DoubleDotY DelimiterY . Block

    TabY  shift, and go to state 89

    TabY      [reduce using rule 64 (Block)]
    TabY      [reduce using rule 65 (TabZeroOrMore)]
    $default  reduce using rule 64 (Block)

    Block          go to state 98
    TabZeroOrMore  go to state 91
    TabOneOrMore   go to state 92


state 75

   61 InputStatement: InputY OpenBracketY CloseBracketY DelimiterY .

    $default  reduce using rule 61 (InputStatement)


state 76

   62 OutputStatement: OutputY OpenBracketY Value CloseBracketY . DelimiterY

    DelimiterY  shift, and go to state 99


state 77

   32 FunctionArguments: VariableY . FuncArgsZeroOrMore

    $default  reduce using rule 34 (FuncArgsZeroOrMore)

    FuncArgsZeroOrMore  go to state 100


state 78

   31 Function: DefY VariableY OpenBracketY FunctionArguments . CloseBracketY DoubleDotY DelimiterY Block

    CloseBracketY  shift, and go to state 101


state 79

   30 ClassDeclaration: ClassY VariableY OpenBracketY CloseBracketY . DoubleDotY DelimiterY Block

    DoubleDotY  shift, and go to state 102


state 80

   58 Arithmetic: OpenBracketZeroOrMore Value . ArithmeticZeroOrMore CloseBracketZeroOrMore

    $default  reduce using rule 59 (ArithmeticZeroOrMore)

    ArithmeticZeroOrMore  go to state 103


state 81

   21 Identificator: VariableY OpenBracesY Arithmetic CloseBracesY .

    $default  reduce using rule 21 (Identificator)


state 82

   38 Arguments: Identificator ArgsZeroOrMore .
   41 ArgsZeroOrMore: ArgsZeroOrMore . CommaY Argument

    CommaY  shift, and go to state 104

    $default  reduce using rule 38 (Arguments)


state 83

   37 FunctionCall: VariableY OpenBracketY Arguments CloseBracketY . DelimiterY

    DelimiterY  shift, and go to state 105


state 84

   29 ArrayDeclaration: OpenBracesY Arguments . CloseBracesY

    CloseBracesY  shift, and go to state 106


state 85

   28 AssignmentStatement: Identificator AssignmentY ArrayDeclaration DelimiterY .

    $default  reduce using rule 28 (AssignmentStatement)


state 86

   27 AssignmentStatement: Identificator AssignmentY FunctionCall DelimiterY .

    $default  reduce using rule 27 (AssignmentStatement)


state 87

   25 AssignmentStatement: Identificator AssignmentY Arithmetic DelimiterY .

    $default  reduce using rule 25 (AssignmentStatement)


state 88

   26 AssignmentStatement: Identificator AssignmentY InputStatement DelimiterY .

    $default  reduce using rule 26 (AssignmentStatement)


state 89

   67 TabOneOrMore: TabY .

    $default  reduce using rule 67 (TabOneOrMore)


state 90

   43 IfStatement: IfY Logic DoubleDotY DelimiterY Block . IfZeroOrMore

    $default  reduce using rule 44 (IfZeroOrMore)

    IfZeroOrMore  go to state 107


state 91

   66 TabZeroOrMore: TabZeroOrMore . TabY
   68 TabOneOrMore: TabZeroOrMore . TabY

    TabY  shift, and go to state 108


state 92

   63 Block: TabOneOrMore . Statement Block

    DelimiterY  shift, and go to state 4
    IfY         shift, and go to state 5
    ForY        shift, and go to state 6
    WhileY      shift, and go to state 7
    InputY      shift, and go to state 8
    OutputY     shift, and go to state 9
    DefY        shift, and go to state 10
    ClassY      shift, and go to state 11
    VariableY   shift, and go to state 12
    ReturnY     shift, and go to state 13

    Statement            go to state 109
    Identificator        go to state 15
    ReturnStatement      go to state 16
    AssignmentStatement  go to state 17
    ClassDeclaration     go to state 18
    Function             go to state 19
    FunctionCall         go to state 20
    IfStatement          go to state 21
    WhileStatement       go to state 22
    ForStatement         go to state 23
    InputStatement       go to state 24
    OutputStatement      go to state 25


state 93

   50 LogicZeroOrMore: LogicZeroOrMore LogicalY . Logic

    $default  reduce using rule 54 (OpenBracketZeroOrMore)

    Logic                  go to state 110
    OpenBracketZeroOrMore  go to state 27


state 94

   48 Logic: OpenBracketZeroOrMore LogicExpression LogicZeroOrMore CloseBracketZeroOrMore .
   57 CloseBracketZeroOrMore: CloseBracketZeroOrMore . CloseBracketY

    CloseBracketY  shift, and go to state 111

    CloseBracketY  [reduce using rule 48 (Logic)]
    $default       reduce using rule 48 (Logic)


state 95

   51 LogicExpression: OpenBracketZeroOrMore Arithmetic LogicExprZeroOrMore . CloseBracketZeroOrMore
   53 LogicExprZeroOrMore: LogicExprZeroOrMore . ComparisonY LogicExpression

    ComparisonY  shift, and go to state 112

    ComparisonY  [reduce using rule 56 (CloseBracketZeroOrMore)]
    $default     reduce using rule 56 (CloseBracketZeroOrMore)

    CloseBracketZeroOrMore  go to state 113


state 96

   16 Value: VariableY OpenBracesY Arithmetic CloseBracesY .

    $default  reduce using rule 16 (Value)


state 97

   47 ForStatement: ForY Value InY Value DoubleDotY . DelimiterY Block

    DelimiterY  shift, and go to state 114


state 98

   46 WhileStatement: WhileY Logic DoubleDotY DelimiterY Block .

    $default  reduce using rule 46 (WhileStatement)


state 99

   62 OutputStatement: OutputY OpenBracketY Value CloseBracketY DelimiterY .

    $default  reduce using rule 62 (OutputStatement)


state 100

   32 FunctionArguments: VariableY FuncArgsZeroOrMore .
   35 FuncArgsZeroOrMore: FuncArgsZeroOrMore . CommaY FunctionArgument

    CommaY  shift, and go to state 115

    $default  reduce using rule 32 (FunctionArguments)


state 101

   31 Function: DefY VariableY OpenBracketY FunctionArguments CloseBracketY . DoubleDotY DelimiterY Block

    DoubleDotY  shift, and go to state 116


state 102

   30 ClassDeclaration: ClassY VariableY OpenBracketY CloseBracketY DoubleDotY . DelimiterY Block

    DelimiterY  shift, and go to state 117


state 103

   58 Arithmetic: OpenBracketZeroOrMore Value ArithmeticZeroOrMore . CloseBracketZeroOrMore
   60 ArithmeticZeroOrMore: ArithmeticZeroOrMore . MathSignY Arithmetic

    MathSignY  shift, and go to state 118

    MathSignY  [reduce using rule 56 (CloseBracketZeroOrMore)]
    $default   reduce using rule 56 (CloseBracketZeroOrMore)

    CloseBracketZeroOrMore  go to state 119


state 104

   41 ArgsZeroOrMore: ArgsZeroOrMore CommaY . Argument

    VariableY  shift, and go to state 58

    Identificator  go to state 120
    Argument       go to state 121


state 105

   37 FunctionCall: VariableY OpenBracketY Arguments CloseBracketY DelimiterY .

    $default  reduce using rule 37 (FunctionCall)


state 106

   29 ArrayDeclaration: OpenBracesY Arguments CloseBracesY .

    $default  reduce using rule 29 (ArrayDeclaration)


state 107

   43 IfStatement: IfY Logic DoubleDotY DelimiterY Block IfZeroOrMore .
   45 IfZeroOrMore: IfZeroOrMore . ElseY DoubleDotY DelimiterY Block

    ElseY  shift, and go to state 122

    ElseY     [reduce using rule 43 (IfStatement)]
    $default  reduce using rule 43 (IfStatement)


state 108

   66 TabZeroOrMore: TabZeroOrMore TabY .
   68 TabOneOrMore: TabZeroOrMore TabY .

    TabY      reduce using rule 66 (TabZeroOrMore)
    $default  reduce using rule 68 (TabOneOrMore)


state 109

   63 Block: TabOneOrMore Statement . Block

    TabY  shift, and go to state 89

    TabY      [reduce using rule 64 (Block)]
    TabY      [reduce using rule 65 (TabZeroOrMore)]
    $default  reduce using rule 64 (Block)

    Block          go to state 123
    TabZeroOrMore  go to state 91
    TabOneOrMore   go to state 92


state 110

   50 LogicZeroOrMore: LogicZeroOrMore LogicalY Logic .

    $default  reduce using rule 50 (LogicZeroOrMore)


state 111

   57 CloseBracketZeroOrMore: CloseBracketZeroOrMore CloseBracketY .

    $default  reduce using rule 57 (CloseBracketZeroOrMore)


state 112

   53 LogicExprZeroOrMore: LogicExprZeroOrMore ComparisonY . LogicExpression

    $default  reduce using rule 54 (OpenBracketZeroOrMore)

    LogicExpression        go to state 124
    OpenBracketZeroOrMore  go to state 46


state 113

   51 LogicExpression: OpenBracketZeroOrMore Arithmetic LogicExprZeroOrMore CloseBracketZeroOrMore .
   57 CloseBracketZeroOrMore: CloseBracketZeroOrMore . CloseBracketY

    CloseBracketY  shift, and go to state 111

    CloseBracketY  [reduce using rule 51 (LogicExpression)]
    $default       reduce using rule 51 (LogicExpression)


state 114

   47 ForStatement: ForY Value InY Value DoubleDotY DelimiterY . Block

    TabY  shift, and go to state 89

    TabY      [reduce using rule 64 (Block)]
    TabY      [reduce using rule 65 (TabZeroOrMore)]
    $default  reduce using rule 64 (Block)

    Block          go to state 125
    TabZeroOrMore  go to state 91
    TabOneOrMore   go to state 92


state 115

   35 FuncArgsZeroOrMore: FuncArgsZeroOrMore CommaY . FunctionArgument

    VariableY  shift, and go to state 126

    FunctionArgument  go to state 127


state 116

   31 Function: DefY VariableY OpenBracketY FunctionArguments CloseBracketY DoubleDotY . DelimiterY Block

    DelimiterY  shift, and go to state 128


state 117

   30 ClassDeclaration: ClassY VariableY OpenBracketY CloseBracketY DoubleDotY DelimiterY . Block

    TabY  shift, and go to state 89

    TabY      [reduce using rule 64 (Block)]
    TabY      [reduce using rule 65 (TabZeroOrMore)]
    $default  reduce using rule 64 (Block)

    Block          go to state 129
    TabZeroOrMore  go to state 91
    TabOneOrMore   go to state 92


state 118

   60 ArithmeticZeroOrMore: ArithmeticZeroOrMore MathSignY . Arithmetic

    $default  reduce using rule 54 (OpenBracketZeroOrMore)

    OpenBracketZeroOrMore  go to state 56
    Arithmetic             go to state 130


state 119

   57 CloseBracketZeroOrMore: CloseBracketZeroOrMore . CloseBracketY
   58 Arithmetic: OpenBracketZeroOrMore Value ArithmeticZeroOrMore CloseBracketZeroOrMore .

    CloseBracketY  shift, and go to state 111

    CloseBracketY  [reduce using rule 58 (Arithmetic)]
    $default       reduce using rule 58 (Arithmetic)


state 120

   42 Argument: Identificator . ArgsZeroOrMore

    $default  reduce using rule 40 (ArgsZeroOrMore)

    ArgsZeroOrMore  go to state 131


state 121

   41 ArgsZeroOrMore: ArgsZeroOrMore CommaY Argument .

    $default  reduce using rule 41 (ArgsZeroOrMore)


state 122

   45 IfZeroOrMore: IfZeroOrMore ElseY . DoubleDotY DelimiterY Block

    DoubleDotY  shift, and go to state 132


state 123

   63 Block: TabOneOrMore Statement Block .

    $default  reduce using rule 63 (Block)


state 124

   53 LogicExprZeroOrMore: LogicExprZeroOrMore ComparisonY LogicExpression .

    $default  reduce using rule 53 (LogicExprZeroOrMore)


state 125
